# coursework3

./: .gitignore  README.md  coursework3.html  coursework3.ipynb  data.csv  pyproject.toml
results/: correlations_internal_external.csv  correlations_internal_external_by_embedding_family.csv  correlations_internal_external_by_embeddings.csv  correlations_internal_external_reduced.csv  correlations_twonn_external.csv  correlations_twonn_internal.csv  near_duplicate_metric_pairs_by_group.csv  results_clustering.csv  space_level_best_rows.csv  space_level_results.csv
