[project]
name = "coursework3"
version = "0.1.0"
description = "Practice of coursework for 3rd degree"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=5.1.0",
    "torch",
    "torchvision",
    "torchaudio",
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "datasets>=4.8.4",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.12",
    "hdbscan>=0.8.43",
    "scikit-learn>=1.8.0",
    "einops>=0.8.2",
    "transformers>=4.57.0,<5.0.0",
    "peft>=0.15.2",
    "accelerate>=1.10.0",
    "pymorphy3>=2.0.6",
    "stop-words>=2025.11.4",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# [tool.uv.extra-build-dependencies]
# flash-attn = ["torch"]
